Fix alignment

--- a/src/assets/scss/pages/app-chat.scss
+++ b/src/assets/scss/pages/app-chat.scss
@@ -229,7 +229,7 @@ $chat-image-back-color: #dfdbe5;
       height: calc(100vh - 22.5rem);
     }
     .user-chats {
-      padding: 20px 30px;
+      padding: 5px 20px;
       position: relative;
       text-align: center;
     }
